--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.4",
+    "react-native-calendars": "^1.22.0",
     "react-native-gesture-handler": "^1.0.15",
     "react-navigation": "^3.2.3"
   },
